# UcTCR-Predictor

./: README.md  Reference_Human_V_Gene.csv  Reference_Mouse_V_Gene.csv  pyproject.toml
UcTCRPredictor/: README.md  common.py  modelhub.py
UcTCRPredictor/UcTCRPredictor/: cli.py
UcTCRPredictor/UcTCRPredictor/species/human/: predict.py
UcTCRPredictor/UcTCRPredictor/species/human/models/: fc_mulit_TCRBV_CF_du.pt
UcTCRPredictor/UcTCRPredictor/species/mouse/models/: config.json  model_uni1.pt  v_vocab.npy
UcTCRPredictor/UcTCRPredictor/species/mouse/models/tcr_utils/: dataset.py  featurization.py
UcTCRPredictor/species/human/: __init__.py  predict.py
UcTCRPredictor/species/human/models/: HUMAN_V_Gene_list.csv  config.json  human_cls.pt  v_vocab.npy
UcTCRPredictor/species/human/models/tcr_utils/: data_collator.py  data_loader.py  utils.py
UcTCRPredictor/species/mouse/: __init__.py  predict.py
UcTCRPredictor/species/mouse/models/: MOUSE_Trbv_gene_map.tsv  mouse_cls.pt
UcTCRPredictor/species/mouse/models/tcr_utils/: data_loader.py  metrics.py  utils.py  vbert.py
tests/: test_data_human.csv  test_data_mouse.csv
